@@ -1,3 +1,7 @@
+- FIND_TIFF etc. should not search so much
+
+- configure should summarize missing stuff at the end
+
 - try
 
 	libsrc/convolution$ grep -l offsets *.c
